fix: reviews overflow

--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -75,6 +75,4 @@
         font-size: 12px
         line-height: 160%
         text-align: justify
-        max-height: 120px 
-        overflow: auto
         
